--- a/14-06-2023/cases.html
+++ b/14-06-2023/cases.html
@@ -271,8 +271,24 @@
     //     console.log(num1)
     // }  //let can be redclared in different blocks
 
+    // {
+    //     var x=10;
+    // }
+    // console.log(x)
 
-    
+    //  const p=10;{
+    //     console.log(p)
+    //  }
+
+    // console.log(a);
+    // {
+    //     var a=10;
+    // }
+
+    abc=10;
+    console.log(abc);
+    // let const=11;
+    // console.log(abc);
 </script>
 <body>
     
