--- a/13-07-2023/dom.html
+++ b/13-07-2023/dom.html
@@ -5,7 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
-    
+<script src="script.js"></script>
+<body style="background-color: #212121; color: #fff;">
+    <div class="parent">        
+        <div class="day" id="id1" >Monday</div>
+        <div class="day" id="id1" >Tuesday</div>
+        <div class="day" id="id1" >Wednesday</div>
+        <div class="day" id="id1" >Thursday</div>
+    </div>
+    <ul>
+        <li class="list-items">getElementById</li>
+        <li class="list-items">getElementsByClassName</li>
+        <li class="list-items">getElementsByTagName</li>
+        <li class="list-items">querySelector</li>
+        <li class="list-items">querySelectorAll</li>
+    </ul>
+    <form>
+        <input name="animal" type="checkbox" value="Cats"> cats
+        <input name="animal" type="checkbox" value="Dogs"> Dogs
+    </form>
 </body>
 </html>
