--- a/14-07-2023/index.html
+++ b/14-07-2023/index.html
@@ -8,6 +8,11 @@
 <body>
     <ul class="language">
         <li>HTML</li>
+        <li>css</li>
+        <li class="current">Javascript</li>
+        <li>Python</li>
+        <li>jquery</li>
+        <li>React</li>
     </ul>
 </body>
 <script src="script1.js"></script>
