--- a/17-07-2023/script.html
+++ b/17-07-2023/script.html
@@ -7,15 +7,12 @@
     <title>Document</title>
 </head>
 <body>
-    <article>
-        <div id="div-01">
-            Here is div-01
-            <div id="div-02">
-                Here is div-02
-                <div id="div-03">Here is div-03</div>
-            </div>
-        </div>
-    </article>
+    <div class="list">
+        <h2 class="title">Items</h2>
+        <ul class="items">
+            
+        </ul>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
