--- a/20-07-2023/index.html
+++ b/20-07-2023/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" id="my">
 
 <head>
     <meta charset="UTF-8">
@@ -42,7 +42,7 @@
 </style>
 
 <body>
-    <h1>Comparing MouseEnter & MouseLeave <br> with MouseOver & MouseOut</h1>
+    <!-- <h1>Comparing MouseEnter & MouseLeave <br> with MouseOver & MouseOut</h1>
     <div class="enter">
         <p>This area uses MOUSEENTER and MOUSELEAVE.</p>
         <p>The first paragraph.</p>
@@ -52,7 +52,15 @@
         <p>This area uses MOUSEOVER and MOUSEOUT.</p>
         <p>The first paragraph.</p>
         <p>The second paragraph.</p>
-    </div>
+    </div> -->
+
+    <h1 id="myid">
+        <!-- This is comment -->
+        <p>we are learning JS</p>
+        <p>Hello</p> <!--I am comment-->
+    </h1>
+    <p id="myid1">I am paragraph</p>
+    <p id="myid2"><span>I am span</span>I am paragraph</p>
     <script src="script.js"></script>
 </body>
 
