--- a/20-07-2023/index.html
+++ b/20-07-2023/index.html
@@ -54,13 +54,18 @@
         <p>The second paragraph.</p>
     </div> -->
 
-    <h1 id="myid">
+    <!-- <h1 id="myid"> -->
         <!-- This is comment -->
-        <p>we are learning JS</p>
-        <p>Hello</p> <!--I am comment-->
-    </h1>
-    <p id="myid1">I am paragraph</p>
+        <!-- <p>we are learning JS</p> -->
+        <!-- <p>Hello</p> I am comment -->
+    <!-- </h1> -->
+    <!-- <p id="myid1">I am paragraph</p>
     <p id="myid2"><span>I am span</span>I am paragraph</p>
+
+    <p id="denmo">
+      cdfvbg <span> sdfg</span>
+    </p> -->
+    
     <script src="script.js"></script>
 </body>
 
