--- a/24-07-2023/task1.html
+++ b/24-07-2023/task1.html
@@ -22,7 +22,7 @@
         background-color: #350048;
     }
 
-    .btn {
+    #btn {
         position: relative;
         display: inline-block;
         color: #fff;
@@ -33,24 +33,24 @@
         border: none;
     }
 
-    .btn .overlay {
+    #btn .overlay {
         position: absolute;
         background-color: #fff;
         border-radius: 50%;
         transform: translate(-50%, -50%);
-        top: 50%;
-        left: 50%;
+        top: 0;
+        left: 0;
         animation: blink 0.5s linear infinite;
     }
 
     @keyframes blink {
-        from {
+        0% {
             height: 0px;
             opacity: 0.5;
             width: 0px;
         }
 
-        to {
+        100% {
             height: 200px;
             width: 200px;
             opacity: 0;
@@ -59,11 +59,11 @@
 </style>
 
 <body>
-    <button class="btn" href="#">Hover Me</button>
+    <button id="btn" href="#">Hover Me</button>
     <span class="overlay"></span>
 
     <script>
-        let btn = document.querySelector('.btn');
+        let btn = document.getElementById('btn');
         btn.addEventListener('click', (e) => {
             let overlay = document.createElement('span');
             overlay.classList.add('overlay')
@@ -75,7 +75,7 @@
 
             setTimeout(()=>{
                 overlay.remove();
-            },500)
+            },5000)
         })
     </script>
 </body>
