--- a/27-07-2023/form.html
+++ b/27-07-2023/form.html
@@ -77,7 +77,7 @@
     }
 
     .input-control.success input {
-        border:2px solid #09c372;
+        border: 2px solid #09c372;
     }
 
     .input-control .error {
@@ -87,9 +87,11 @@
     .input-control .error input {
         border-color: red;
     }
-    #submittedMsg{
+
+    #submittedMsg {
         text-align: center;
         display: none;
+        padding: 60px;
     }
 </style>
 
@@ -124,98 +126,11 @@
                 <button type="submit" id="btn">Submit</button>
             </div>
         </form>
-        <div id="submittedMsg">
-            <h1 id="submittedMsg">Your form is submitted </h1>
-        </div>
     </div>
-    <script>
-
-        let userName = document.getElementById('name');
-        let email = document.getElementById('email');
-        let pass = document.getElementById('pass');
-        let pass2 = document.getElementById('pass2');
-
-        function setError(element, message) {
-            let input = element.parentElement;
-            let error = input.querySelector('.error');
-
-            error.innerText = message;
-            input.classList.add('error');
-            input.classList.remove('success');
-        }
-
-        function setSuccess(element) {
-            let input = element.parentElement;
-            let error = input.querySelector('.error');
-
-            error.innerText = '';
-            input.classList.add('success');
-            input.classList.remove('error');
-        }
-
-        function submitMsg(){
-            let formContainer = document.querySelector('.container');
-            let msg = document.getElementById('submittedMsg');
-
-            formContainer.style.display = 'none';
-            msg.style.display ='block';
-        }
-        function validateForm() {
-            let userNameValue = userName.value.trim();
-            let emailValue = email.value.trim();
-            let passvalue = pass.value.trim();
-            let pass2Value = pass2.value.trim();
-
-            // checking condition for all
-            // for username
-            if (userNameValue == '') {
-                setError(userName, 'Username is required')
-            }
-            else {
-                setSuccess(userName);
-            }
-
-            // for email
-
-            if (emailValue == '') {
-                setError(email, 'Email is required')
-            }
-            else {
-                setSuccess(email);
-            }
-
-            //for password
-            if (passvalue == '') {
-                setError(pass, 'Password is required')
-            }
-            else if (passvalue.length < 8) {
-                setError(pass, 'Password should be greater than 8')
-            }
-            else {
-                setSuccess(pass)
-            }
-
-            //password again
-            if (pass2Value == '') {
-                setError(pass2, 'Password is required')
-            }
-            else if (pass2Value.length < 8) {
-                setError(pass2, 'Password should be greater than 8')
-            }
-            else {
-                setSuccess(pass2)
-            }
-
-            if(userNameValue!=='' && emailValue!=='' && passvalue!=='' && passvalue.length>=8 && pass2Value!=='' && pass2Value.length>=8){
-                submitMsg();
-            }
-        }
-        let form = document.getElementById('form-input');
-        form.addEventListener('submit', (event) => {
-            event.preventDefault();
-            validateForm();
-        })
-    </script>
+    <div id="submittedMsg">
+        <h1>Your form is submitted </h1>
+    </div>
+    <script src="form.js"></script>
 </body>
 
 </html>
